Smooth load Up!

--- a/Button Animation/index.html
+++ b/Button Animation/index.html
@@ -14,7 +14,13 @@
       <button class="button">
             <span>Button</span>
             <svg class="loader-con" width="50" height="50">
-                  <circle class="loader" cx="12" cy="25" r="9.5" stroke="white" stroke-width="3" fill="none"></circle>
+                  <circle 
+                  class="loader" 
+                  cx="25" cy="25"
+                  r="9.5" stroke="white" 
+                  stroke-width="3" 
+                  fill="none"
+                  ></circle>
             </svg>
       </button>
 </body>
